--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "pinia": "^3.0.4",
+    "sass": "^1.96.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
