--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "modern-normalize": "^3.0.1",
     "pinia": "^3.0.4",
     "sass": "^1.96.0",
     "vue": "^3.5.25",
