--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pinia": "^3.0.4",
     "sass": "^1.96.0",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
@@ -35,8 +36,10 @@
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.9.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^3.1.5"
   }
 }
