--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "modern-normalize": "^3.0.1",
     "pinia": "^3.0.4",
     "sass": "^1.96.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
-    "vue-svg-loader": "^0.16.0"
+    "vue-svg-loader": "^0.16.0",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
