--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "modern-normalize": "^3.0.1",
+    "naive-ui": "^2.43.2",
     "pinia": "^3.0.4",
     "sass": "^1.96.0",
     "vue": "^3.5.25",
