--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "https://api.unite2030.digitalbutlers.team/api/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
