--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^2.0.3",
     "axios": "^1.13.2",
     "modern-normalize": "^3.0.1",
-    "naive-ui": "^2.43.2",
     "pinia": "^3.0.4",
+    "primevue": "^4.5.4",
     "sass": "^1.96.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
